# django-dataclass-field

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  justfile  pyproject.toml
.github/workflows/: python-publish.yml
django_dataclass_field/: fields.py
django_dataclass_field/templates/django_dataclass_field/admin/: jsonwidget.html
examples/: db.sqlite3  pyproject.toml
examples/car_app/: admin.py  models.py
examples/car_app/migrations/: 0001_initial.py
examples/car_project/: asgi.py  settings.py  urls.py  wsgi.py
